apps/base/searxng/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - name: web-ui
      port: 8080
      targetPort: 8080
  type: ClusterIP
